added feature previous photo, still buggy

--- a/web/gallery.html
+++ b/web/gallery.html
@@ -10,6 +10,9 @@
             <div id="gallery" class="gallery">
 
 </div>
+<div id="gallery-fullscreen" class="gallery__fullscreen">
+
+</div>
 
         </div>
         <!--  -->
